--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "http://lcmpbll.github.io/react-portfolio",
+  "homepage": "https://lcmpbll.github.io/react-portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
